--- a/formulario.css
+++ b/formulario.css
@@ -1,16 +1,30 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-#titulo{
+#titulo {
     font-family: sans-serif;
     color: #380b61;
     margin-left: 7%;
 }
-#subtitulo{
+#subtitulo {
     font-family: sans-serif;
     color: #380b61;
     margin-left: 10%;
+}
+
+fieldset {
+    border: 0;
+}
+
+body {
+    background-color: #f0f8ff;
+    font-family: sans-serif;
+    font-size: 1em;
+    color: #59429d;
+    margin-left: 36%;
+    margin-top: 2%;
+    justify-content: center;
 }
 
