--- a/formulario.css
+++ b/formulario.css
@@ -50,6 +50,29 @@ fieldset.grupo .campo {
 .campo input[type="text"], .campo input[type="email"], .campo select, .campo textarea{
     padding: 0.2em;
     border: 1px solid #59429d;
-    box-shadow: 2px 2px 2px rgb(0,0,0,0.2);
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     display: inline-block;
+}
+
+.campo select option {
+    padding-right: 1em;
+}
+
+.campo input:focus, .campo select:focus, .campo textarea:focus {
+    background: #e0e0f8;
+}
+
+.botao {
+    background: #59429d;
+    border: 0;
+    margin-bottom: 1em;
+    color: #ffffff;
+    padding: 0.2em 0.6em;
+    box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
+    position: absolute;
+    top: 90%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
 }
