--- a/formulario.css
+++ b/formulario.css
@@ -31,6 +31,7 @@ body {
     color: #59429d;
     margin-left: 36%;
     margin-top: 2%;
+    width: 500px;
     justify-content: center;
 }
 
@@ -57,6 +58,10 @@ input, select, textarea, button {
     margin-bottom: 0.2em;
     color: #59429d;
     display: block;
+}
+
+#senioridade {
+   width: 500px;
 }
 
 fieldset.grupo .campo {
@@ -92,6 +97,7 @@ fieldset.grupo .campo {
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
+    width: ;
 }
 
 .botao:hover {
