--- a/formulario.css
+++ b/formulario.css
@@ -85,6 +85,7 @@ fieldset.grupo .campo {
 }
 
 .botao {
+    font-size: 1.2em;
     background: #59429d;
     border: 0;
     margin-bottom: 1em;
@@ -93,7 +94,7 @@ fieldset.grupo .campo {
     box-shadow: 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
     position: absolute;
-    top: 70%;
+    top: 90%;
     left: 50%;
     margin-right: -50%;
     transform: translate(-50%, -50%);
